--- a/index.html
+++ b/index.html
@@ -9,7 +9,22 @@
 
 <body>
 
-  <p>Репозиторий создан для обучения на продвинутом онлайн-интенсиве «<a href="https://htmlacademy.ru/advanced_intensive">Создание веб-интерфейсов с помощью HTML и CSS</a>».</p>
+	<div class="header">
+		<div class="logo">
+			<a href="/" class="logo">
+				<img src="img/logo.png" alt="logo">
+			</a>
+		</div>
+		<i class="open_menu_btn"><i>
+		<div class="mobile_menu">
+			<ul>
+				<li>Информация</li>
+				<li>Возможности</li>
+				<li>Отзывы</li>
+				<li>Стоимость</li>
+			</ul>
+		</div>
+	</div>
 
   <!-- <script src="js/script.js"></script> -->
 
