--- a/index.html
+++ b/index.html
@@ -25,7 +25,78 @@
 			</ul>
 		</div>
 	</div>
-
+	<div class="content">
+		<div class="intro">
+			<p>Взгляните на жизнь иначе!</p>	
+		</div>
+		<div class="links">
+			<a>Скачать приложение</a>
+			<div class="logos">	
+				<img src="" alt="Apple">
+				<img src="" alt="Andoid">
+				<img src="" alt="Windows Phone">
+			</div>
+		</div>
+		<div class="information">
+			<div class="proposal">
+				<p>Устали от серости мегаполиса?</p>
+				<p>Нам есть, что вам предложить!</p>
+			</div>
+			<div class="promo">
+				<h3>Поднимает настроение</h3>
+				<p>Приложение позволит вам победить осеннюю хандру и деперессию буквально в несколько кликов!</p>
+			</div>
+			<div class="promo">
+				<h3>Меняет мир вокруг</h3>
+				<p>Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
+			</div>
+			<div class="promo">
+				<h3>Заводит новых друзей</h3>
+				<p>Ставьте лайки, комментируте, делитесь фотографиями с друзьями и заводите новых</p>
+			</div>
+			<img src="" alt="iphone">
+		</div>
+		<div class="review">
+			<div class="slide">
+				<h3>Николай Петров</h3>
+				<p>«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+			</div>	
+			<div class="pages">
+				<ul>
+					<li class="active"></li>
+					<li></li>
+					<li></li>
+				</ul>
+			</div>
+		</div>
+		<div class="price">
+			<div class="slide">
+				<ul>
+					<li>Стандарт 3,99 USD</li>
+					<li>Розовый фильтр</li>
+					<li>Смайлики</li>
+					<li>Комментарии</li>
+				</ul>
+			</div>
+			<div class="pages">
+				<ul>
+					<li></li>
+					<li class="active"></li>
+					<li></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	<div class="footer">
+		<p>Остались вопросы? Свяжитесь с нами!</p>
+		<h3>Звоните</h3>
+		<p>+7 (812) 555-66-66</p>
+		<h3>Пишите</h3>
+		<p>mail@htmlacademy.ru</p>
+		<h3>Приежайте в гости</h3>
+		<p>ул. Большая Конюшенная, 19/8</p>
+		<img src="" alt="map">
+	</div>
   <!-- <script src="js/script.js"></script> -->
 
 </body>
