Разметка blog.html

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
 	<div class="header">
 		<div class="logo">
-			<a href="/" class="logo">
+			<a href="/">
 				<img src="img/logo.png" alt="logo">
 			</a>
 		</div>
-		<i class="open_menu_btn"><i>
+		<i class="open_menu_btn"></i>
 		<div class="mobile_menu">
 			<ul>
 				<li>Информация</li>
