--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 	<div class="header">
 		<div class="logo">
-			<a href="/">
+			<a href="index.html">
 				<img src="img/logo.png" alt="logo">
 			</a>
 		</div>
