--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="header">
 		<div class="logo">
-			<a href="/">
+			<a href="index.html">
 				<img src="img/logo.png" alt="logo">
 			</a>
 		</div>
