--- a/index.html
+++ b/index.html
@@ -8,57 +8,56 @@
 </head>
 
 <body>
-
-	<div class="header">
+	<header class="main_header">
 		<div class="logo">
 			<a href="index.html">
 				<img src="img/logo.png" alt="logo">
 			</a>
 		</div>
-		<i class="open_menu_btn"></i>
+		<button class="open_menu_btn"></button>
 		<div class="mobile_menu">
 			<ul>
-				<li>Информация</li>
-				<li>Возможности</li>
-				<li>Отзывы</li>
-				<li>Стоимость</li>
+				<li><a href="">Информация</a></li>
+				<li><a href="">Возможности</a></li>
+				<li><a href="">Отзывы</a></li>
+				<li><a href="">Стоимость</a></li>
 			</ul>
 		</div>
-	</div>
-	<div class="content">
-		<div class="intro">
-			<p>Взгляните на жизнь иначе!</p>	
-		</div>
-		<div class="links">
-			<a>Скачать приложение</a>
+	</header>
+	<div class="promo">
+		<h1>Взгляните на жизнь иначе!</h1>	
+		<div class="mobile">
+			<a href="">Скачать приложение</a>
 			<div class="logos">	
-				<img src="" alt="Apple">
-				<img src="" alt="Andoid">
-				<img src="" alt="Windows Phone">
+				<a href=""><img src="" alt="Apple"></a>
+				<a href=""><img src="" alt="Andoid"></a>
+				<a href=""><img src="" alt="Windows Phone"></a>
+			</div>
+			<div class="app_info">
+				Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8
 			</div>
 		</div>
 		<div class="information">
-			<div class="proposal">
-				<p>Устали от серости мегаполиса?</p>
-				<p>Нам есть, что вам предложить!</p>
-			</div>
-			<div class="promo">
-				<h3>Поднимает настроение</h3>
+			<p>Устали от серости мегаполиса?</p>
+			<p>Нам есть, что вам предложить!</p>
+		</div>
+		<div class="features">
+			<div class="features_item">
+				<h2>Поднимает настроение</h2>
 				<p>Приложение позволит вам победить осеннюю хандру и деперессию буквально в несколько кликов!</p>
 			</div>
-			<div class="promo">
-				<h3>Меняет мир вокруг</h3>
+			<div class="features_item">
+				<h2>Меняет мир вокруг</h2>
 				<p>Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
 			</div>
-			<div class="promo">
-				<h3>Заводит новых друзей</h3>
+			<div class="features_item">
+				<h2>Заводит новых друзей</h2>
 				<p>Ставьте лайки, комментируте, делитесь фотографиями с друзьями и заводите новых</p>
 			</div>
-			<img src="" alt="iphone">
 		</div>
 		<div class="review">
 			<div class="slide">
-				<h3>Николай Петров</h3>
+				<h2>Николай Петров</h2>
 				<p>«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
 			</div>	
 			<div class="pages">
@@ -70,12 +69,12 @@
 			</div>
 		</div>
 		<div class="price">
-			<div class="slide">
+			<div class="slide hit">
 				<ul>
-					<li>Стандарт 3,99 USD</li>
-					<li>Розовый фильтр</li>
-					<li>Смайлики</li>
-					<li>Комментарии</li>
+					<li class="tarif"><span class="tarif_name">Стандарт</span> 3,99 USD</li>
+					<li class="selected">Розовый фильтр</li>
+					<li class="selected">Смайлики</li>
+					<li class="nonselected">Комментарии</li>
 				</ul>
 			</div>
 			<div class="pages">
@@ -87,16 +86,15 @@
 			</div>
 		</div>
 	</div>
-	<div class="footer">
-		<p>Остались вопросы? Свяжитесь с нами!</p>
-		<h3>Звоните</h3>
+	<footer class="main_footer">
+		<p class="footer_title">Остались вопросы? Свяжитесь с нами!</p>
+		<h2>Звоните</h2>
 		<p>+7 (812) 555-66-66</p>
-		<h3>Пишите</h3>
+		<h2>Пишите</h2>
 		<p>mail@htmlacademy.ru</p>
-		<h3>Приежайте в гости</h3>
+		<h2>Приежайте в гости</h2>
 		<p>ул. Большая Конюшенная, 19/8</p>
-		<img src="" alt="map">
-	</div>
+	</footer>
   <!-- <script src="js/script.js"></script> -->
 
 </body>
