--- a/blog.html
+++ b/blog.html
@@ -7,58 +7,60 @@
   <!-- <link rel="stylesheet" href="css/style.css"> -->
 </head>
 <body>
-	<div class="header">
+	<header class="main_header">
 		<div class="logo">
 			<a href="index.html">
 				<img src="img/logo.png" alt="logo">
 			</a>
 		</div>
-		<i class="open_menu_btn"></i>
+		<button class="open_menu_btn"></button>
 		<div class="mobile_menu">
 			<ul>
-				<li>Информация</li>
-				<li>Возможности</li>
-				<li>Отзывы</li>
-				<li>Стоимость</li>
+				<li><a href="">Информация</a></li>
+				<li><a href="">Возможности</a></li>
+				<li><a href="">Отзывы</a></li>
+				<li><a href="">Стоимость</a></li>
 			</ul>
 		</div>
-	</div>
-	<div class="content">
-		<div class="intro">
-			<p>Блог путешественников, пользователей Пинк</p>	
-		</div>
-		<div class="article_intro">
-			<h3>Антон и Надя в Тайланде</h3>
-			<span class="public_date">Опубликовано: 6 месяцев назад</span>
+	</header>
+	<h1 class="page_header">
+		Блог путешественников, пользователей Пинк	
+	</h1>
+	<div class="blog">
+		<article class="blog_item">
+			<h2>Антон и Надя в Тайланде</h2>
+			<div class="public_date">Опубликовано: 6 месяцев назад</div>
 			<p>Читайте рассказ о том, как семейная пара посещала Тайланд, стараясь максимально избегать избитых туристических мест и районов.</p>
-		</div>
-		<div class="article_intro">
-			<h3>Гастрольный тур «Кубанских борщеваров»</h3>
-			<span class="public_date">Опубликовано: 5 лет назад</span>
+		</article>
+		<article class="blog_item">
+			<h2>Гастрольный тур «Кубанских борщеваров»</h2>
+			<div class="public_date">Опубликовано: 5 лет назад</div>
 			<p>Возрождение культурных традиций уже не за горами. Фолк-металл-рэп-группа из столицы Кубани провела весь год в гастролях по России и ближнему (а также среднему) зарубежью.</p>
-		</div>
-		<div class="article_intro">
-			<h3>Чета Болонских в Париже</h3>
-			<span class="public_date">Опубликовано: 100 лет назад</span>
+		</article>
+		<article class="blog_item">
+			<h2>Чета Болонских в Париже</h2>
+			<div class="public_date">Опубликовано: 100 лет назад</div>
 			<p>Невероятные приключения русских во Франции. Интриги, предательства, погони и, разумеется, убийства. Читайте криминально-исторический трактат в двух томах.</p>
-		</div>
-		<div class="article_intro">
-			<h3>Путешествие на яхте сеньора Христофора</h3>
-			<span class="public_date">Опубликовано: 523 года назад</span>
+		</article>
+		<article class="blog_item">
+			<h2>Путешествие на яхте сеньора Христофора</h2>
+			<div class="public_date">Опубликовано: 523 года назад</div>
 			<p>Группа испанцев отдыхала на яхте, но они даже не представляли, какие открытия ждут их впереди и чем это обернется для всего человечества!</p>
+		</article>
+	</div>
+	<ul class="pages">
+		<li><a href="">1</a></li>
+		<li><a href="">2</a></li>
+		<li><a href="">3</a></li>
+		<li><a href="">4</a></li>
+	</ul>
+	<footer class="main_footer">
+		<a href="index.html"><img src="" alt="Pink"></a>
+		<div class="social_icons">
+			<a href="" class="social_icon tw"></a>
+			<a href="" class="social_icon fb"></a>
+			<a href="" class="social_icon yt"></a>
 		</div>
-		<ul class="pages">
-			<li>1</li>
-			<li>2</li>
-			<li>3</li>
-			<li>4</li>
-		</ul>
-	</div>
-	<div class="footer">
-		<a href="/"><img src="" alt="Pink"></a>
-		<span class="soclial_icons tw"></span>
-		<span class="soclial_icons fb"></span>
-		<span class="soclial_icons pm"></span>
-		<p>Разработано</p>
-		<img src="" alt="HTML Academy">
-	</div>
+		<p>Разработано <a href=""><img src="" alt="HTML Academy"></a></p>
+		
+	</footer>
