--- a/post.html
+++ b/post.html
@@ -9,58 +9,59 @@
 
 <body>
 
-	<div class="header">
+	<header class="main_header">
 		<div class="logo">
-			<a href="/">
+			<a href="index.html">
 				<img src="img/logo.png" alt="logo">
 			</a>
 		</div>
-		<i class="open_menu_btn"></i>
+		<button class="open_menu_btn"></button>
 		<div class="mobile_menu">
 			<ul>
-				<li>Информация</li>
-				<li>Возможности</li>
-				<li>Отзывы</li>
-				<li>Стоимость</li>
+				<li><a href="">Информация</a></li>
+				<li><a href="">Возможности</a></li>
+				<li><a href="">Отзывы</a></li>
+				<li><a href="">Стоимость</a></li>
 			</ul>
 		</div>
-	</div>
-	<div class="content">
-		<div class="intro">
-			<p>Блог путешественников, пользователей Пинк</p>	
+	</header>
+		<div class="page_header">
+			Блог путешественников, пользователей Пинк
 		</div>
-		<div class="article">
+		<div class="blog_post">
 			<h1>Антон и Надя в Тайланде</h1>
-			<span class="public_date">Опубликовано: 6 месяцев назад</span>
+			<div class="public_date">Опубликовано: 6 месяцев назад</div>
 			<p>Читайте рассказ о том, как семейная пара посещала Тайланд, стараясь максимально избегать избитых туристических мест и районов.</p>
-			<h3>Предыстория</h3>
-			<p>В Азию нам хотелось попасть уже давно, но все время что-то останавливало. Также не давал покоя вопрос гигиены и чистоты вокруг. Были сомнения и на счет местной еды. Однако, увидев выгодные билеты на <a href="http://skyscanner.ru">skyscanner.ru</a> мы все-таки решились!</p>
-			<h3>Выбор отеля</h3>
+			<h2>Предыстория</h2>
+			<p>В Азию нам хотелось попасть уже давно, но все время что-то останавливало. Также не давал покоя вопрос гигиены и чистоты вокруг. Были сомнения и на счет местной еды. Однако, увидев выгодные билеты на <a href="http://skyscanner.ru" target="blanl">skyscanner.ru</a> мы все-таки решились!</p>
+			<h2>Выбор отеля</h2>
 			<p>В Тайланде огромный разброс по стоимости отелей и так же сильно отличаются и они сами. Так как достопримечательности щедро разбросаны по всей стране, то чтобы посетить их все, нужно пожить в нескольких разных городах. В итоге мы остановились на следующих:</p>
 			<ul>
 				<li>Point Yamu by Como (Пхукет)</li>
 				<li>Amari Vogue Hotel (Краби)</li>
 				<li>Photo Hotel (Пхукет)</li>
 			</ul>
-			<p> выборе отелей мы учитывали как расположение, так и отзывы на Tripadvisor. Например, вот, что пишут люди про Point Yamu:</p>
-			<div class="quote">
+			<p>В выборе отелей мы учитывали как расположение, так и отзывы на Tripadvisor. Например, вот, что пишут люди про Point Yamu:</p>
+			<blockquote>
 				<p>Замечательное место,в которое хочется вернуться обязательно!  Персонал отзывчивый и  внимательный,еда-потрясающая. Отель расположен в тихом и уединенном месте-в чем вся и прелесть. СПА отличный.  Потрясающие виды.</p>
-				<span>Олег, г. Москва</span>
-			</div>
-			<h3>Местная еда</h3>
+				<div class="author">Олег, г. Москва</div>
+			</blockquote>
+			<h2>Местная еда</h2>
 			<p>Существует мнение, что вся еда в Тайланде экстремально острая. Это мнение сложилось не напрасно! Но не стоит делать из этого проблему — просто попросите сделать ваше блюдо «not spicy». Желающие могут попробовать жареных тараканчиков. Мы не рискнули.</p>
 			<ul class="pages">
-				<li>Пред.</li>
-				<li>След.</li>
-				<li>Назад к списку</li>
+				<li class="cell"><a href="">Пред.</a></li>
+				<li class="cell"><a href="">След.</a></li>
+				<li class="back"><a href="">Назад к списку</a></li>
 			</ul>
 		</div>
 	</div>
-	<div class="footer">
-		<a href="/"><img src="" alt="Pink"></a>
-		<span class="soclial_icons tw"></span>
-		<span class="soclial_icons fb"></span>
-		<span class="soclial_icons pm"></span>
-		<p>Разработано</p>
-		<img src="" alt="HTML Academy">
-	</div>
+	<footer class="main_footer">
+		<a href="index.html"><img src="" alt="Pink"></a>
+		<div class="social_icons">
+			<a href="" class="social_icon tw"></a>
+			<a href="" class="social_icon fb"></a>
+			<a href="" class="social_icon yt"></a>
+		</div>
+		<p>Разработано <a href=""><img src="" alt="HTML Academy"></a></p>
+		
+	</footer>
