--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-	<header class="main_header">
-		<div class="logo">
+	<header class="page_header">
+		<div class="page_header__logo">
 			<a href="index.html">
 				<img src="img/logo.png" alt="logo">
 			</a>
@@ -28,12 +28,12 @@
 		<h1>Взгляните на жизнь иначе!</h1>	
 		<div class="mobile">
 			<a href="">Скачать приложение</a>
-			<div class="logos">	
+			<div class="mobile__logos">	
 				<a href=""><img src="" alt="Apple"></a>
 				<a href=""><img src="" alt="Andoid"></a>
 				<a href=""><img src="" alt="Windows Phone"></a>
 			</div>
-			<div class="app_info">
+			<div class="mobile__app_info">
 				Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8
 			</div>
 		</div>
@@ -42,52 +42,52 @@
 			<p>Нам есть, что вам предложить!</p>
 		</div>
 		<div class="features">
-			<div class="features_item">
+			<div class="features__features_item">
 				<h2>Поднимает настроение</h2>
 				<p>Приложение позволит вам победить осеннюю хандру и деперессию буквально в несколько кликов!</p>
 			</div>
-			<div class="features_item">
+			<div class="features__features_item">
 				<h2>Меняет мир вокруг</h2>
 				<p>Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
 			</div>
-			<div class="features_item">
+			<div class="features__features_item">
 				<h2>Заводит новых друзей</h2>
 				<p>Ставьте лайки, комментируте, делитесь фотографиями с друзьями и заводите новых</p>
 			</div>
 		</div>
 		<div class="review">
-			<div class="slide">
+			<div class="review__slide">
 				<h2>Николай Петров</h2>
 				<p>«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
 			</div>	
 			<div class="pages">
 				<ul>
-					<li class="active"></li>
-					<li></li>
-					<li></li>
+					<li class="pages__item--active"></li>
+					<li class="pages__item"></li>
+					<li class="pages__item"></li>
 				</ul>
 			</div>
 		</div>
 		<div class="price">
-			<div class="slide hit">
-				<ul>
-					<li class="tarif"><span class="tarif_name">Стандарт</span> 3,99 USD</li>
-					<li class="selected">Розовый фильтр</li>
-					<li class="selected">Смайлики</li>
-					<li class="nonselected">Комментарии</li>
+			<div class="price__slide--hit">
+				<ul class="price__tarif">
+					<li class="price__tarif__title"><span>Стандарт</span> 3,99 USD</li>
+					<li class="price__tarif__item--selected">Розовый фильтр</li>
+					<li class="price__tarif__item--selected">Смайлики</li>
+					<li class="price__tarif__item--nonselected">Комментарии</li>
 				</ul>
 			</div>
 			<div class="pages">
 				<ul>
-					<li></li>
-					<li class="active"></li>
-					<li></li>
+					<li class="pages__item--active"></li>
+					<li class="pages__item"></li>
+					<li class="pages__item"></li>
 				</ul>
 			</div>
 		</div>
 	</div>
-	<footer class="main_footer">
-		<p class="footer_title">Остались вопросы? Свяжитесь с нами!</p>
+	<footer class="page_footer">
+		<p class="page_footer__title">Остались вопросы? Свяжитесь с нами!</p>
 		<h2>Звоните</h2>
 		<p>+7 (812) 555-66-66</p>
 		<h2>Пишите</h2>
