--- a/blog.html
+++ b/blog.html
@@ -7,8 +7,8 @@
   <!-- <link rel="stylesheet" href="css/style.css"> -->
 </head>
 <body>
-	<header class="main_header">
-		<div class="logo">
+	<header class="page_header">
+		<div class="page_header__logo">
 			<a href="index.html">
 				<img src="img/logo.png" alt="logo">
 			</a>
@@ -23,28 +23,28 @@
 			</ul>
 		</div>
 	</header>
-	<h1 class="page_header">
+	<h1 class="page_title">
 		Блог путешественников, пользователей Пинк	
 	</h1>
 	<div class="blog">
-		<article class="blog_item">
+		<article class="blog__item">
 			<h2>Антон и Надя в Тайланде</h2>
-			<div class="public_date">Опубликовано: 6 месяцев назад</div>
+			<div class="blog__item__public_date">Опубликовано: 6 месяцев назад</div>
 			<p>Читайте рассказ о том, как семейная пара посещала Тайланд, стараясь максимально избегать избитых туристических мест и районов.</p>
 		</article>
-		<article class="blog_item">
+		<article class="blog__item">
 			<h2>Гастрольный тур «Кубанских борщеваров»</h2>
-			<div class="public_date">Опубликовано: 5 лет назад</div>
+			<div class="blog__item__public_date">Опубликовано: 5 лет назад</div>
 			<p>Возрождение культурных традиций уже не за горами. Фолк-металл-рэп-группа из столицы Кубани провела весь год в гастролях по России и ближнему (а также среднему) зарубежью.</p>
 		</article>
-		<article class="blog_item">
+		<article class="blog__item">
 			<h2>Чета Болонских в Париже</h2>
-			<div class="public_date">Опубликовано: 100 лет назад</div>
+			<div class="blog__item__public_date">Опубликовано: 100 лет назад</div>
 			<p>Невероятные приключения русских во Франции. Интриги, предательства, погони и, разумеется, убийства. Читайте криминально-исторический трактат в двух томах.</p>
 		</article>
-		<article class="blog_item">
+		<article class="blog__item">
 			<h2>Путешествие на яхте сеньора Христофора</h2>
-			<div class="public_date">Опубликовано: 523 года назад</div>
+			<div class="blog__item__public_date">Опубликовано: 523 года назад</div>
 			<p>Группа испанцев отдыхала на яхте, но они даже не представляли, какие открытия ждут их впереди и чем это обернется для всего человечества!</p>
 		</article>
 	</div>
@@ -57,10 +57,9 @@
 	<footer class="main_footer">
 		<a href="index.html"><img src="" alt="Pink"></a>
 		<div class="social_icons">
-			<a href="" class="social_icon tw"></a>
-			<a href="" class="social_icon fb"></a>
-			<a href="" class="social_icon yt"></a>
+			<a href="" class="social_icons__item--tw"></a>
+			<a href="" class="social_icons__item--fb"></a>
+			<a href="" class="social_icons__item--yt"></a>
 		</div>
 		<p>Разработано <a href=""><img src="" alt="HTML Academy"></a></p>
-		
 	</footer>
