--- a/form.html
+++ b/form.html
@@ -7,8 +7,8 @@
   <!-- <link rel="stylesheet" href="css/style.css"> -->
 </head>
 <body>
-	<header class="main_header">
-		<div class="logo">
+	<header class="page_header">
+		<div class="page_header__logo">
 			<a href="index.html">
 				<img src="img/logo.png" alt="logo">
 			</a>
@@ -23,19 +23,21 @@
 			</ul>
 		</div>
 	</header>
-	<h1 class="page_header">Конкурс на самое безбашеное путешествие с Пинк</h1>
+	<h1 class="page_title">
+		Конкурс на самое безбашеное путешествие с Пинк
+	</h1>
 	<div class="form">
 		<form action="">
 			<p>Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту! Пожалуйста, заполните форму ниже:</p>	
 			
 			<div class="wrap">
 				<div class="form_row">
-					<label for="name">Имя:*</label>
-					<input type="text" id="name" placeholder="Введите ваше имя">
+					<label for="foto__name">Имя:*</label>
+					<input type="text" id="foto__name" placeholder="Введите ваше имя">
 				</div>
 				<div class="form_row">
-					<label for="last_name">Фамилия: *</label>
-					<input type="text" id="last_name" placeholder="Укажите фамилию">
+					<label for="last_foto__name">Фамилия: *</label>
+					<input type="text" id="last_foto__name" placeholder="Укажите фамилию">
 				</div>
 				<div class="form_row">
 					<label for="patronymic">Отечетво:</label>
@@ -49,15 +51,15 @@
 					С каким приложением путешествовали? *
 				</div>
 				<div class="form_row">
-					<input type="radio" name="os" id="ios">
+					<input type="radio" foto__name="os" id="ios">
 					<label for="ios">Pink для iOS</label>
 				</div>
 				<div class="form_row">
-					<input type="radio" name="os" id="android">
+					<input type="radio" foto__name="os" id="android">
 					<label for="android">Pink на Android</label>
 				</div>
 				<div class="form_row">
-					<input type="radio" name="os" id="wp">
+					<input type="radio" foto__name="os" id="wp">
 					<label for="wp">Windows Phone</label>
 				</div>
 			</div>
@@ -127,7 +129,7 @@
 				<div class="right_col">
 					<div class="form_row">
 						<label for="traveler_name" class="form_title">Имя: *</label>
-						<input type="text" placeholder="Введите ваше имя" id="traveler_name">
+						<input type="text" placeholder="Введите ваше имя" id="traveler_foto_name">
 					</div>
 					<div class="form_row">
 						<label for="traveler_nick" class="form_title">Прозвище:</label>
@@ -135,8 +137,8 @@
 					</div>
 
 					<div class="form_row">
-						<label for="traveler_name2" class="form_title">Имя: *</label>
-						<input type="text" placeholder="Введите ваше имя" id="traveler_name2">
+						<label for="traveler_foto_name2" class="form_title">Имя: *</label>
+						<input type="text" placeholder="Введите ваше имя" id="traveler_foto_name2">
 					</div>
 					<div class="form_row">
 						<label for="traveler_nick2" class="form_title">Прозвище:</label>
@@ -182,49 +184,49 @@
 				<input type="file">
 				<div class="foto_wrap">
 					<figure class="foto">
-						<button class="foto_close"></button>
+						<button class="foto__close"></button>
 						<img src="" alt="">
-						<figurecaption class="name">img-1.jpg</figurecaption>
+						<figurecaption class="foto__foto__name">img-1.jpg</figurecaption>
 					</figure>
 					<figure class="foto">
-						<button class="foto_close"></button>
+						<button class="foto__close"></button>
 						<img src="" alt="">
-						<figurecaption class="name">img-2.jpg</figurecaption>
+						<figurecaption class="foto__name">img-2.jpg</figurecaption>
 					</figure>
 					<figure class="foto">
-						<button class="foto_close"></button>
+						<button class="foto__close"></button>
 						<img src="" alt="">
-						<figurecaption class="name">img-3.jpg</figurecaption>
+						<figurecaption class="foto__name">img-3.jpg</figurecaption>
 					</figure>
 					<figure class="foto">
-						<button class="foto_close"></button>
+						<button class="foto__close"></button>
 						<img src="" alt="">
-						<figurecaption class="name">img-4.jpg</figurecaption>
+						<figurecaption class="foto__name">img-4.jpg</figurecaption>
 					</figure>
 					<figure class="foto">
-						<button class="foto_close"></button>
+						<button class="foto__close"></button>
 						<img src="" alt="">
-						<figurecaption class="name">img-5.jpg</figurecaption>
+						<figurecaption class="foto__name">img-5.jpg</figurecaption>
 					</figure>
 					<figure class="foto">
-						<button class="foto_close"></button>
+						<button class="foto__close"></button>
 						<img src="" alt="">
-						<figurecaption class="name">img-6.jpg</figurecaption>
+						<figurecaption class="foto__name">img-6.jpg</figurecaption>
 					</figure>
 					<figure class="foto">
-						<button class="foto_close"></button>
+						<button class="foto__close"></button>
 						<img src="" alt="">
-						<figurecaption class="name">img-7.jpg</figurecaption>
+						<figurecaption class="foto__name">img-7.jpg</figurecaption>
 					</figure>
 					<figure class="foto">
-						<button class="foto_close"></button>
+						<button class="foto__close"></button>
 						<img src="" alt="">
-						<figurecaption class="name">img-8.jpg</figurecaption>
+						<figurecaption class="foto__name">img-8.jpg</figurecaption>
 					</figure>
 				</div>
 			</div>
 
-			<button class="btn_green" type="submit">Отправить форму</button>
+			<button class="btn--green" type="submit">Отправить форму</button>
 
 			<p><span class="pink">*</span> - Обязательные поля</p>
 		</form>
@@ -232,10 +234,9 @@
 	<footer class="main_footer">
 		<a href="index.html"><img src="" alt="Pink"></a>
 		<div class="social_icons">
-			<a href="" class="social_icon tw"></a>
-			<a href="" class="social_icon fb"></a>
-			<a href="" class="social_icon yt"></a>
+			<a href="" class="social_icons__item--tw"></a>
+			<a href="" class="social_icons__item--fb"></a>
+			<a href="" class="social_icons__item--yt"></a>
 		</div>
 		<p>Разработано <a href=""><img src="" alt="HTML Academy"></a></p>
-		
 	</footer>
