--- a/blog.html
+++ b/blog.html
@@ -27,24 +27,24 @@
 		Блог путешественников, пользователей Пинк	
 	</h1>
 	<div class="blog">
-		<article class="blog__item">
+		<article class="blog_item">
 			<h2>Антон и Надя в Тайланде</h2>
-			<div class="blog__item__public_date">Опубликовано: 6 месяцев назад</div>
+			<div class="blog_item__public_date">Опубликовано: 6 месяцев назад</div>
 			<p>Читайте рассказ о том, как семейная пара посещала Тайланд, стараясь максимально избегать избитых туристических мест и районов.</p>
 		</article>
-		<article class="blog__item">
+		<article class="blog_item">
 			<h2>Гастрольный тур «Кубанских борщеваров»</h2>
-			<div class="blog__item__public_date">Опубликовано: 5 лет назад</div>
+			<div class="blog_item__public_date">Опубликовано: 5 лет назад</div>
 			<p>Возрождение культурных традиций уже не за горами. Фолк-металл-рэп-группа из столицы Кубани провела весь год в гастролях по России и ближнему (а также среднему) зарубежью.</p>
 		</article>
-		<article class="blog__item">
+		<article class="blog_item">
 			<h2>Чета Болонских в Париже</h2>
-			<div class="blog__item__public_date">Опубликовано: 100 лет назад</div>
+			<div class="blog_item__public_date">Опубликовано: 100 лет назад</div>
 			<p>Невероятные приключения русских во Франции. Интриги, предательства, погони и, разумеется, убийства. Читайте криминально-исторический трактат в двух томах.</p>
 		</article>
-		<article class="blog__item">
+		<article class="blog_item">
 			<h2>Путешествие на яхте сеньора Христофора</h2>
-			<div class="blog__item__public_date">Опубликовано: 523 года назад</div>
+			<div class="blog_item__public_date">Опубликовано: 523 года назад</div>
 			<p>Группа испанцев отдыхала на яхте, но они даже не представляли, какие открытия ждут их впереди и чем это обернется для всего человечества!</p>
 		</article>
 	</div>
