--- a/form.html
+++ b/form.html
@@ -186,42 +186,42 @@
 					<figure class="foto">
 						<button class="foto__close"></button>
 						<img src="" alt="">
-						<figurecaption class="foto__foto__name">img-1.jpg</figurecaption>
+						<figcaption class="foto__foto__name">img-1.jpg</figcaption>
 					</figure>
 					<figure class="foto">
 						<button class="foto__close"></button>
 						<img src="" alt="">
-						<figurecaption class="foto__name">img-2.jpg</figurecaption>
+						<figcaption class="foto__name">img-2.jpg</figcaption>
 					</figure>
 					<figure class="foto">
 						<button class="foto__close"></button>
 						<img src="" alt="">
-						<figurecaption class="foto__name">img-3.jpg</figurecaption>
+						<figcaption class="foto__name">img-3.jpg</figcaption>
 					</figure>
 					<figure class="foto">
 						<button class="foto__close"></button>
 						<img src="" alt="">
-						<figurecaption class="foto__name">img-4.jpg</figurecaption>
+						<figcaption class="foto__name">img-4.jpg</figcaption>
 					</figure>
 					<figure class="foto">
 						<button class="foto__close"></button>
 						<img src="" alt="">
-						<figurecaption class="foto__name">img-5.jpg</figurecaption>
+						<figcaption class="foto__name">img-5.jpg</figcaption>
 					</figure>
 					<figure class="foto">
 						<button class="foto__close"></button>
 						<img src="" alt="">
-						<figurecaption class="foto__name">img-6.jpg</figurecaption>
+						<figcaption class="foto__name">img-6.jpg</figcaption>
 					</figure>
 					<figure class="foto">
 						<button class="foto__close"></button>
 						<img src="" alt="">
-						<figurecaption class="foto__name">img-7.jpg</figurecaption>
+						<figcaption class="foto__name">img-7.jpg</figcaption>
 					</figure>
 					<figure class="foto">
 						<button class="foto__close"></button>
 						<img src="" alt="">
-						<figurecaption class="foto__name">img-8.jpg</figurecaption>
+						<figcaption class="foto__name">img-8.jpg</figcaption>
 					</figure>
 				</div>
 			</div>
