--- a/blog.html
+++ b/blog.html
@@ -7,59 +7,74 @@
   <!-- <link rel="stylesheet" href="css/style.css"> -->
 </head>
 <body>
-	<header class="page_header">
-		<div class="page_header__logo">
-			<a href="index.html">
-				<img src="img/logo.png" alt="logo">
+	<header class="page-header">
+		<div class="logo">
+			<a class="logo__link" href="index.html">
+				<img src="img/logo.png" class="logo__img" alt="logo">
 			</a>
 		</div>
-		<button class="open_menu_btn"></button>
-		<div class="mobile_menu">
-			<ul>
-				<li><a href="">Информация</a></li>
-				<li><a href="">Возможности</a></li>
-				<li><a href="">Отзывы</a></li>
-				<li><a href="">Стоимость</a></li>
+		<button class="open-menu-btn"></button>
+		<div class="mobile-menu">
+			<ul class="mobile-menu__list">
+				<li class="mobile-menu__item"><a class="mobile-menu__link" href="">Информация</a></li>
+				<li class="mobile-menu__item"><a class="mobile-menu__link" href="">Возможности</a></li>
+				<li class="mobile-menu__item"><a class="mobile-menu__link" href="">Отзывы</a></li>
+				<li class="mobile-menu__item"><a class="mobile-menu__link" href="">Стоимость</a></li>
 			</ul>
 		</div>
 	</header>
-	<h1 class="page_title">
+	
+	<h1 class="page-title">
 		Блог путешественников, пользователей Пинк	
 	</h1>
+	
 	<div class="blog">
-		<article class="blog_item">
-			<h2>Антон и Надя в Тайланде</h2>
-			<div class="blog_item__public_date">Опубликовано: 6 месяцев назад</div>
-			<p>Читайте рассказ о том, как семейная пара посещала Тайланд, стараясь максимально избегать избитых туристических мест и районов.</p>
+		<article class="blog-item">
+			<h2 class="blog-item__title">Антон и Надя в Тайланде</h2>
+			<div class="blog-item__date">Опубликовано: 6 месяцев назад</div>
+			<p class="blog-item__text">Читайте рассказ о том, как семейная пара посещала Тайланд, стараясь максимально избегать избитых туристических мест и районов.</p>
 		</article>
-		<article class="blog_item">
-			<h2>Гастрольный тур «Кубанских борщеваров»</h2>
-			<div class="blog_item__public_date">Опубликовано: 5 лет назад</div>
-			<p>Возрождение культурных традиций уже не за горами. Фолк-металл-рэп-группа из столицы Кубани провела весь год в гастролях по России и ближнему (а также среднему) зарубежью.</p>
+		<article class="blog-item">
+			<h2 class="blog-item__title">Гастрольный тур «Кубанских борщеваров»</h2>
+			<div class="blog-item__date">Опубликовано: 5 лет назад</div>
+			<p class="blog-item__text">Возрождение культурных традиций уже не за горами. Фолк-металл-рэп-группа из столицы Кубани провела весь год в гастролях по России и ближнему (а также среднему) зарубежью.</p>
 		</article>
-		<article class="blog_item">
-			<h2>Чета Болонских в Париже</h2>
-			<div class="blog_item__public_date">Опубликовано: 100 лет назад</div>
-			<p>Невероятные приключения русских во Франции. Интриги, предательства, погони и, разумеется, убийства. Читайте криминально-исторический трактат в двух томах.</p>
+		<article class="blog-item">
+			<h2 class="blog-item__title">Чета Болонских в Париже</h2>
+			<div class="blog-item__date">Опубликовано: 100 лет назад</div>
+			<p class="blog-item__text">Невероятные приключения русских во Франции. Интриги, предательства, погони и, разумеется, убийства. Читайте криминально-исторический трактат в двух томах.</p>
 		</article>
-		<article class="blog_item">
-			<h2>Путешествие на яхте сеньора Христофора</h2>
-			<div class="blog_item__public_date">Опубликовано: 523 года назад</div>
-			<p>Группа испанцев отдыхала на яхте, но они даже не представляли, какие открытия ждут их впереди и чем это обернется для всего человечества!</p>
+		<article class="blog-item">
+			<h2 class="blog-item__title">Путешествие на яхте сеньора Христофора</h2>
+			<div class="blog-item__date">Опубликовано: 523 года назад</div>
+			<p class="blog-item__text">Группа испанцев отдыхала на яхте, но они даже не представляли, какие открытия ждут их впереди и чем это обернется для всего человечества!</p>
 		</article>
 	</div>
-	<ul class="pages">
-		<li><a href="">1</a></li>
-		<li><a href="">2</a></li>
-		<li><a href="">3</a></li>
-		<li><a href="">4</a></li>
-	</ul>
-	<footer class="main_footer">
-		<a href="index.html"><img src="" alt="Pink"></a>
-		<div class="social_icons">
-			<a href="" class="social_icons__item--tw"></a>
-			<a href="" class="social_icons__item--fb"></a>
-			<a href="" class="social_icons__item--yt"></a>
+	
+	<div class="pagination">
+		<ul class="pagination__list">
+			<li class="pagination__item"><a href="#" class="pagination__link pagination__link--active">1</a></li>
+			<li class="pagination__item"><a href="#" class="pagination__link">2</a></li>
+			<li class="pagination__item"><a href="#" class="pagination__link">3</a></li>
+			<li class="pagination__item"><a href="#" class="pagination__link">4</a></li>
+		</ul>
+	</div>
+	
+	<footer class="main-footer">
+		<div class="logo">
+			<a class="logo__link" href="index.html">
+				<img src="" class="logo__img" alt="logo">
+			</a>
 		</div>
-		<p>Разработано <a href=""><img src="" alt="HTML Academy"></a></p>
+		<div class="social-icons">
+			<a href="" class="social-icon social-icon--tw"></a>
+			<a href="" class="social-icon social-icon--fb"></a>
+			<a href="" class="social-icon social-icon--yt"></a>
+		</div>
+		<div class="developer">
+			Разработано
+			<a href="" class="developer__link">
+				<img src="" alt="HTML Academy">
+			</a>
+		</div>
 	</footer>
