--- a/index.html
+++ b/index.html
@@ -8,92 +8,96 @@
 </head>
 
 <body>
-	<header class="page_header">
-		<div class="page_header__logo">
-			<a href="index.html">
-				<img src="img/logo.png" alt="logo">
+	<header class="page-header">
+		<div class="logo">
+			<a class="logo__link" href="index.html">
+				<img src="img/logo.png" class="logo__img" alt="logo">
 			</a>
 		</div>
-		<button class="open_menu_btn"></button>
-		<div class="mobile_menu">
-			<ul>
-				<li><a href="">Информация</a></li>
-				<li><a href="">Возможности</a></li>
-				<li><a href="">Отзывы</a></li>
-				<li><a href="">Стоимость</a></li>
+		<button class="open-menu-btn"></button>
+		<div class="mobile-menu">
+			<ul class="mobile-menu__list">
+				<li class="mobile-menu__item"><a class="mobile-menu__link" href="">Информация</a></li>
+				<li class="mobile-menu__item"><a class="mobile-menu__link" href="">Возможности</a></li>
+				<li class="mobile-menu__item"><a class="mobile-menu__link" href="">Отзывы</a></li>
+				<li class="mobile-menu__item"><a class="mobile-menu__link" href="">Стоимость</a></li>
 			</ul>
 		</div>
 	</header>
+	
 	<div class="promo">
 		<h1>Взгляните на жизнь иначе!</h1>	
-		<div class="mobile">
-			<a href="">Скачать приложение</a>
-			<div class="mobile__logos">	
-				<a href=""><img src="" alt="Apple"></a>
-				<a href=""><img src="" alt="Andoid"></a>
-				<a href=""><img src="" alt="Windows Phone"></a>
+		<div class="mobile-app">
+			<a href="" class="mobile-app__link">Скачать приложение</a>
+			<div class="mobile-app__logos">	
+				<a class="mobile-app__link" href=""><img class="mobile-app__img" src="" alt="Apple"></a>
+				<a class="mobile-app__link" href=""><img class="mobile-app__img" src="" alt="Andoid"></a>
+				<a class="mobile-app__link" href=""><img class="mobile-app__img" src="" alt="Windows Phone"></a>
 			</div>
-			<div class="mobile__app_info">
+			<div class="mobile-app__info">
 				Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8
 			</div>
 		</div>
 		<div class="information">
-			<p>Устали от серости мегаполиса?</p>
-			<p>Нам есть, что вам предложить!</p>
+			<p class="information__text">Устали от серости мегаполиса?</p>
+			<p class="information__text">Нам есть, что вам предложить!</p>
 		</div>
 		<div class="features">
-			<div class="features__features_item">
-				<h2>Поднимает настроение</h2>
-				<p>Приложение позволит вам победить осеннюю хандру и деперессию буквально в несколько кликов!</p>
+			<div class="features-item">
+				<h2 class="features-item__title">Поднимает настроение</h2>
+				<p class="features-item__text">Приложение позволит вам победить осеннюю хандру и деперессию буквально в несколько кликов!</p>
 			</div>
-			<div class="features__features_item">
-				<h2>Меняет мир вокруг</h2>
-				<p>Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
+			<div class="features-item">
+				<h2 class="features-item__title">Меняет мир вокруг</h2>
+				<p class="features-item__text">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
 			</div>
-			<div class="features__features_item">
-				<h2>Заводит новых друзей</h2>
-				<p>Ставьте лайки, комментируте, делитесь фотографиями с друзьями и заводите новых</p>
+			<div class="features-item">
+				<h2 class="features-item__title">Заводит новых друзей</h2>
+				<p class="features-item__text">Ставьте лайки, комментируте, делитесь фотографиями с друзьями и заводите новых</p>
 			</div>
 		</div>
-		<div class="review">
-			<div class="review__slide">
-				<h2>Николай Петров</h2>
-				<p>«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+		<div class="slider">
+			<div class="review">
+				<h2 class="review__title">Николай Петров</h2>
+				<p class="review__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
 			</div>	
 			<div class="pages">
-				<ul>
-					<li class="pages__item--active"></li>
-					<li class="pages__item"></li>
-					<li class="pages__item"></li>
+			 	<ul class="pages__list">
+					<li class="pages__item"><a href="#" class="pages__link pages__link--active">1</a></li>
+					<li class="pages__item"><a href="#" class="pages__link">2</a></li>
+					<li class="pages__item"><a href="#" class="pages__link">3</a></li>
 				</ul>
 			</div>
 		</div>
-		<div class="price">
-			<div class="price__slide--hit">
-				<ul class="price__tarif">
-					<li class="price__tarif__title"><span>Стандарт</span> 3,99 USD</li>
-					<li class="price__tarif__item--selected">Розовый фильтр</li>
-					<li class="price__tarif__item--selected">Смайлики</li>
-					<li class="price__tarif__item--nonselected">Комментарии</li>
+		<div class="slider">
+			<div class="tarif tarif--hit">
+				<ul class="tarif__list">
+					<li class="tarif__title"><span>Стандарт</span> 3,99 USD</li>
+					<li class="tarif__item tarif__item--selected">Розовый фильтр</li>
+					<li class="tarif__item tarif__item--selected">Смайлики</li>
+					<li class="tarif__item tarif__item--nonselected">Комментарии</li>
 				</ul>
 			</div>
 			<div class="pages">
-				<ul>
-					<li class="pages__item--active"></li>
-					<li class="pages__item"></li>
-					<li class="pages__item"></li>
+			 	<ul class="pages__list">
+					<li class="pages__item"><a href="#" class="pages__link pages__link--active">1</a></li>
+					<li class="pages__item"><a href="#" class="pages__link">2</a></li>
+					<li class="pages__item"><a href="#" class="pages__link">3</a></li>
 				</ul>
 			</div>
 		</div>
 	</div>
-	<footer class="page_footer">
-		<p class="page_footer__title">Остались вопросы? Свяжитесь с нами!</p>
-		<h2>Звоните</h2>
-		<p>+7 (812) 555-66-66</p>
-		<h2>Пишите</h2>
-		<p>mail@htmlacademy.ru</p>
-		<h2>Приежайте в гости</h2>
-		<p>ул. Большая Конюшенная, 19/8</p>
+	
+	<footer class="page-footer">
+		<p class="page-footer__title">Остались вопросы? Свяжитесь с нами!</p>
+		<section class="contacts">
+			<h2 class="contacts__title">Звоните</h2>
+			<p class="contacts__text">+7 (812) 555-66-66</p>
+			<h2 class="contacts__title">Пишите</h2>
+			<p class="contacts__text">mail@htmlacademy.ru</p>
+			<h2 class="contacts__title">Приежайте в гости</h2>
+			<p class="contacts__text">ул. Большая Конюшенная, 19/8</p>
+		</section>
 	</footer>
   <!-- <script src="js/script.js"></script> -->
 
