--- a/post.html
+++ b/post.html
@@ -8,58 +8,72 @@
 </head>
 
 <body>
-
-	<header class="page_header">
-		<div class="page_header__logo">
-			<a href="index.html">
-				<img src="img/logo.png" alt="logo">
+	<header class="page-header">
+		<div class="logo">
+			<a class="logo__link" href="index.html">
+				<img src="img/logo.png" class="logo__img" alt="logo">
 			</a>
 		</div>
-		<button class="open_menu_btn"></button>
-		<div class="mobile_menu">
-			<ul>
-				<li><a href="">Информация</a></li>
-				<li><a href="">Возможности</a></li>
-				<li><a href="">Отзывы</a></li>
-				<li><a href="">Стоимость</a></li>
+		<button class="open-menu-btn"></button>
+		<div class="mobile-menu">
+			<ul class="mobile-menu__list">
+				<li class="mobile-menu__item"><a class="mobile-menu__link" href="">Информация</a></li>
+				<li class="mobile-menu__item"><a class="mobile-menu__link" href="">Возможности</a></li>
+				<li class="mobile-menu__item"><a class="mobile-menu__link" href="">Отзывы</a></li>
+				<li class="mobile-menu__item"><a class="mobile-menu__link" href="">Стоимость</a></li>
 			</ul>
 		</div>
 	</header>
+	
 	<div class="page_title">
 		Блог путешественников, пользователей Пинк
 	</div>
-	<div class="blog_post">
-		<h1>Антон и Надя в Тайланде</h1>
-		<div class="blog_post__public_date">Опубликовано: 6 месяцев назад</div>
-		<p>Читайте рассказ о том, как семейная пара посещала Тайланд, стараясь максимально избегать избитых туристических мест и районов.</p>
-		<h2>Предыстория</h2>
-		<p>В Азию нам хотелось попасть уже давно, но все время что-то останавливало. Также не давал покоя вопрос гигиены и чистоты вокруг. Были сомнения и на счет местной еды. Однако, увидев выгодные билеты на <a href="http://skyscanner.ru" target="blank">skyscanner.ru</a> мы все-таки решились!</p>
-		<h2>Выбор отеля</h2>
-		<p>В Тайланде огромный разброс по стоимости отелей и так же сильно отличаются и они сами. Так как достопримечательности щедро разбросаны по всей стране, то чтобы посетить их все, нужно пожить в нескольких разных городах. В итоге мы остановились на следующих:</p>
+	
+	<article class="blog-post">
+		<h1 class="blog-post__title">Антон и Надя в Тайланде</h1>
+		<div class="blog-post__date">Опубликовано: 6 месяцев назад</div>
+		<p class="blog-post__text">Читайте рассказ о том, как семейная пара посещала Тайланд, стараясь максимально избегать избитых туристических мест и районов.</p>
+		<h2 class="blog-post__subtitle">Предыстория</h2>
+		<p class="blog-post__text">В Азию нам хотелось попасть уже давно, но все время что-то останавливало. Также не давал покоя вопрос гигиены и чистоты вокруг. Были сомнения и на счет местной еды. Однако, увидев выгодные билеты на <a href="http://skyscanner.ru" target="blank">skyscanner.ru</a> мы все-таки решились!</p>
+		<h2 class="blog-post__subtitle">Выбор отеля</h2>
+		<p class="blog-post__text">В Тайланде огромный разброс по стоимости отелей и так же сильно отличаются и они сами. Так как достопримечательности щедро разбросаны по всей стране, то чтобы посетить их все, нужно пожить в нескольких разных городах. В итоге мы остановились на следующих:</p>
 		<ul>
 			<li>Point Yamu by Como (Пхукет)</li>
 			<li>Amari Vogue Hotel (Краби)</li>
 			<li>Photo Hotel (Пхукет)</li>
 		</ul>
-		<p>В выборе отелей мы учитывали как расположение, так и отзывы на Tripadvisor. Например, вот, что пишут люди про Point Yamu:</p>
-		<blockquote>
-			<p>Замечательное место,в которое хочется вернуться обязательно!  Персонал отзывчивый и  внимательный,еда-потрясающая. Отель расположен в тихом и уединенном месте-в чем вся и прелесть. СПА отличный.  Потрясающие виды.</p>
-			<div class="author">Олег, г. Москва</div>
+		<p class="blog-post__text">В выборе отелей мы учитывали как расположение, так и отзывы на Tripadvisor. Например, вот, что пишут люди про Point Yamu:</p>
+		<blockquote class="quote">
+			<p class="quote__text">Замечательное место,в которое хочется вернуться обязательно!  Персонал отзывчивый и  внимательный,еда-потрясающая. Отель расположен в тихом и уединенном месте-в чем вся и прелесть. СПА отличный.  Потрясающие виды.</p>
+			<span class="quote__author">Олег, г. Москва</span>
 		</blockquote>
-		<h2>Местная еда</h2>
-		<p>Существует мнение, что вся еда в Тайланде экстремально острая. Это мнение сложилось не напрасно! Но не стоит делать из этого проблему — просто попросите сделать ваше блюдо «not spicy». Желающие могут попробовать жареных тараканчиков. Мы не рискнули.</p>
-		<ul class="pages">
-			<li class="pages__item"><a href="">Пред.</a></li>
-			<li class="pages__item"><a href="">След.</a></li>
-			<li class="pages__item--row"><a href="">Назад к списку</a></li>
+		<h2 class="blog-post__subtitle">Местная еда</h2>
+		<p class="blog-post__text">Существует мнение, что вся еда в Тайланде экстремально острая. Это мнение сложилось не напрасно! Но не стоит делать из этого проблему — просто попросите сделать ваше блюдо «not spicy». Желающие могут попробовать жареных тараканчиков. Мы не рискнули.</p>
+	</article>
+
+	<div class="pagination">
+		<ul class="pagination__list">
+			<li class="pagination__item"><a href="#" class="pagination__link">Пред.</a></li>
+			<li class="pagination__item"><a href="#" class="pagination__link">След.</a></li>
+			<li class="pagination__item"><a href="#" class="pagination__link  pagination__link--row">3</a></li>
 		</ul>
 	</div>
-	<footer class="main_footer">
-		<a href="index.html"><img src="" alt="Pink"></a>
-		<div class="social_icons">
-			<a href="" class="social_icons__item--tw"></a>
-			<a href="" class="social_icons__item--fb"></a>
-			<a href="" class="social_icons__item--yt"></a>
+
+	<footer class="main-footer">
+		<div class="logo">
+			<a class="logo__link" href="index.html">
+				<img src="" class="logo__img" alt="logo">
+			</a>
 		</div>
-		<p>Разработано <a href=""><img src="" alt="HTML Academy"></a></p>
+		<div class="social-icons">
+			<a href="" class="social-icon social-icon--tw"></a>
+			<a href="" class="social-icon social-icon--fb"></a>
+			<a href="" class="social-icon social-icon--yt"></a>
+		</div>
+		<div class="developer">
+			Разработано
+			<a href="" class="developer__link">
+				<img src="" alt="HTML Academy">
+			</a>
+		</div>
 	</footer>
