--- a/post.html
+++ b/post.html
@@ -25,7 +25,7 @@
 		</div>
 	</header>
 	
-	<div class="page_title">
+	<div class="page-title">
 		Блог путешественников, пользователей Пинк
 	</div>
 	
