Верстка главной страницы

--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
 					</ul>
 				</div>
 			</div>
-			<div class="slider">
+			<div class="slider slider--grey">
 				<div class="tarif tarif--hit">
 					<ul class="tarif__list">
-						<li class="tarif__title"><span>Стандарт</span> 3,99 USD</li>
+						<li class="tarif__title"><span class="tarif__name">Стандарт</span> 3,99 USD</li>
 						<li class="tarif__item tarif__item--selected">Розовый фильтр</li>
 						<li class="tarif__item tarif__item--selected">Смайлики</li>
 						<li class="tarif__item tarif__item--nonselected">Комментарии</li>
@@ -86,8 +86,8 @@
 				</div>
 				<div class="pages">
 				 	<ul class="pages__list">
-						<li class="pages__item"><a href="#" class="pages__link pages__link--active">1</a></li>
-						<li class="pages__item"><a href="#" class="pages__link">2</a></li>
+						<li class="pages__item"><a href="#" class="pages__link">1</a></li>
+						<li class="pages__item"><a href="#" class="pages__link  pages__link--active">2</a></li>
 						<li class="pages__item"><a href="#" class="pages__link">3</a></li>
 					</ul>
 				</div>
