верстка моб версии

--- a/post.html
+++ b/post.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HTML Academy: pink</title>
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/style.css">
@@ -60,7 +61,7 @@
 		<div class="pagination">
 			<ul class="pagination__list">
 				<li class="pagination__item pagination__item--big"><a href="#" class="pagination__link pagination__link--big">Пред.</a></li>
-				<li class="pagination__item"><a href="#" class="pagination__link pagination__link--big">След.</a></li>
+				<li class="pagination__item pagination__item--big"><a href="#" class="pagination__link pagination__link--big">След.</a></li>
 				<li class="pagination__item  pagination__item--row"><a href="#" class="pagination__link pagination__link--row">Назад к списку</a></li>
 			</ul>
 		</div>
