--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HTML Academy: pink</title>
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/style.css">
@@ -76,7 +77,15 @@
 				</div>
 			</div>
 			<div class="slider slider--grey">
-				<div class="tarif tarif--hit">
+				<div class="tarif">
+					<ul class="tarif__list tarif--hit">
+						<li class="tarif__title"><span class="tarif__name">Стандарт</span> 3,99 USD</li>
+						<li class="tarif__item tarif__item--selected">Розовый фильтр</li>
+						<li class="tarif__item tarif__item--selected">Смайлики</li>
+						<li class="tarif__item tarif__item--nonselected">Комментарии</li>
+					</ul>
+				</div>
+				<!--<div class="tarif tarif--hit">
 					<ul class="tarif__list">
 						<li class="tarif__title"><span class="tarif__name">Стандарт</span> 3,99 USD</li>
 						<li class="tarif__item tarif__item--selected">Розовый фильтр</li>
@@ -84,6 +93,14 @@
 						<li class="tarif__item tarif__item--nonselected">Комментарии</li>
 					</ul>
 				</div>
+				<div class="tarif">
+					<ul class="tarif__list">
+						<li class="tarif__title"><span class="tarif__name">Стандарт</span> 3,99 USD</li>
+						<li class="tarif__item tarif__item--selected">Розовый фильтр</li>
+						<li class="tarif__item tarif__item--selected">Смайлики</li>
+						<li class="tarif__item tarif__item--nonselected">Комментарии</li>
+					</ul>
+				</div>-->
 				<div class="pages">
 				 	<ul class="pages__list">
 						<li class="pages__item"><a href="#" class="pages__link">1</a></li>
