доверстана таблица(костыльно :D)

--- a/index.html
+++ b/index.html
@@ -77,30 +77,32 @@
 				</div>
 			</div>
 			<div class="slider slider--grey">
-				<div class="tarif">
-					<ul class="tarif__list tarif--hit">
-						<li class="tarif__title"><span class="tarif__name">Стандарт</span> 3,99 USD</li>
-						<li class="tarif__item tarif__item--selected">Розовый фильтр</li>
-						<li class="tarif__item tarif__item--selected">Смайлики</li>
-						<li class="tarif__item tarif__item--nonselected">Комментарии</li>
-					</ul>
+				<div class="slider__inner">
+					<div class="tarif">
+						<ul class="tarif__list">
+							<li class="tarif__title"><span class="tarif__name">Стандарт</span> 3,99 USD</li>
+							<li class="tarif__item tarif__item--selected">Розовый фильтр</li>
+							<li class="tarif__item tarif__item--selected">Смайлики</li>
+							<li class="tarif__item tarif__item--nonselected">Комментарии</li>
+						</ul>
+					</div>
+					<div class="tarif">
+						<ul class="tarif__list  tarif--hit">
+							<li class="tarif__title"><span class="tarif__name">Стандарт</span> 3,99 USD</li>
+							<li class="tarif__item tarif__item--selected">Розовый фильтр</li>
+							<li class="tarif__item tarif__item--selected">Смайлики</li>
+							<li class="tarif__item tarif__item--nonselected">Комментарии</li>
+						</ul>
+					</div>
+					<div class="tarif">
+						<ul class="tarif__list">
+							<li class="tarif__title"><span class="tarif__name">Стандарт</span> 3,99 USD</li>
+							<li class="tarif__item tarif__item--selected">Розовый фильтр</li>
+							<li class="tarif__item tarif__item--selected">Смайлики</li>
+							<li class="tarif__item tarif__item--nonselected">Комментарии</li>
+						</ul>
+					</div>
 				</div>
-				<!--<div class="tarif tarif--hit">
-					<ul class="tarif__list">
-						<li class="tarif__title"><span class="tarif__name">Стандарт</span> 3,99 USD</li>
-						<li class="tarif__item tarif__item--selected">Розовый фильтр</li>
-						<li class="tarif__item tarif__item--selected">Смайлики</li>
-						<li class="tarif__item tarif__item--nonselected">Комментарии</li>
-					</ul>
-				</div>
-				<div class="tarif">
-					<ul class="tarif__list">
-						<li class="tarif__title"><span class="tarif__name">Стандарт</span> 3,99 USD</li>
-						<li class="tarif__item tarif__item--selected">Розовый фильтр</li>
-						<li class="tarif__item tarif__item--selected">Смайлики</li>
-						<li class="tarif__item tarif__item--nonselected">Комментарии</li>
-					</ul>
-				</div>-->
 				<div class="pages">
 				 	<ul class="pages__list">
 						<li class="pages__item"><a href="#" class="pages__link">1</a></li>
