--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <body>
 	<header class="page-header">
-		<div class="wrapper-center">
-			<div class="page-header-wrap">
+		<div class="page-header__wrap">
+			<div class="page-header-top">
 				<div class="logo">
 					<a class="logo__link" href="index.html">
 						<img src="img/logo.png" class="logo__img" alt="logo">
@@ -28,104 +28,102 @@
 					</ul>
 				</div>
 			</div>
+
+			<h1 class="page-title page-title--big">Взгляните на жизнь иначе!</h1>	
+		</div>
+		
+		<div class="mobile-app">
+			<a href="" class="mobile-app__link-down">Скачать приложение</a>
+			<div class="mobile-app__logos">	
+				<a class="mobile-app__link" href=""><img class="mobile-app__img" src="img/app_apple.png" alt="Apple"></a>
+				<a class="mobile-app__link" href=""><img class="mobile-app__img" src="img/app_android.png" alt="Andoid"></a>
+				<a class="mobile-app__link" href=""><img class="mobile-app__img" src="img/app_win.png" alt="Windows Phone"></a>
+			</div>
+			<div class="mobile-app__info">
+				Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8
+			</div>
 		</div>
 	</header>
 	
-	<div class="wrapper-center">
-		<div class="promo">
-			<h1 class="page-title page-title--big">Взгляните на жизнь иначе!</h1>	
-			<div class="mobile-app">
-				<a href="" class="mobile-app__link-down">Скачать приложение</a>
-				<div class="mobile-app__logos">	
-					<a class="mobile-app__link" href=""><img class="mobile-app__img" src="img/app_apple.png" alt="Apple"></a>
-					<a class="mobile-app__link" href=""><img class="mobile-app__img" src="img/app_android.png" alt="Andoid"></a>
-					<a class="mobile-app__link" href=""><img class="mobile-app__img" src="img/app_win.png" alt="Windows Phone"></a>
-				</div>
-				<div class="mobile-app__info">
-					Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8
-				</div>
+	<div class="promo">
+		<div class="information">
+			<p class="information__text">Устали от серости мегаполиса?</p>
+			<p class="information__text">Нам есть, что вам предложить!</p>
+		</div>
+		<div class="features">
+			<div class="features-item">
+				<h2 class="features-item__title">Поднимает настроение</h2>
+				<p class="features-item__text">Приложение позволит вам победить осеннюю хандру и деперессию буквально в несколько кликов!</p>
 			</div>
-			<div class="information">
-				<p class="information__text">Устали от серости мегаполиса?</p>
-				<p class="information__text">Нам есть, что вам предложить!</p>
+			<div class="features-item">
+				<h2 class="features-item__title">Меняет мир вокруг</h2>
+				<p class="features-item__text">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
 			</div>
-			<div class="features">
-				<div class="features-item">
-					<h2 class="features-item__title">Поднимает настроение</h2>
-					<p class="features-item__text">Приложение позволит вам победить осеннюю хандру и деперессию буквально в несколько кликов!</p>
-				</div>
-				<div class="features-item">
-					<h2 class="features-item__title">Меняет мир вокруг</h2>
-					<p class="features-item__text">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
-				</div>
-				<div class="features-item">
-					<h2 class="features-item__title">Заводит новых друзей</h2>
-					<p class="features-item__text">Ставьте лайки, комментируте, делитесь фотографиями с друзьями и заводите новых</p>
-				</div>
+			<div class="features-item">
+				<h2 class="features-item__title">Заводит новых друзей</h2>
+				<p class="features-item__text">Ставьте лайки, комментируте, делитесь фотографиями с друзьями и заводите новых</p>
 			</div>
-			<div class="slider">
-				<div class="review">
-					<h2 class="review__title">Николай Петров</h2>
-					<p class="review__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
-				</div>	
-				<div class="pages">
-				 	<ul class="pages__list">
-						<li class="pages__item"><a href="#" class="pages__link pages__link--active">1</a></li>
-						<li class="pages__item"><a href="#" class="pages__link">2</a></li>
-						<li class="pages__item"><a href="#" class="pages__link">3</a></li>
+		</div>
+		<div class="slider">
+			<div class="review">
+				<h2 class="review__title">Николай Петров</h2>
+				<p class="review__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+			</div>	
+			<div class="pages">
+				<ul class="pages__list">
+					<li class="pages__item"><a href="#" class="pages__link pages__link--active">1</a></li>
+					<li class="pages__item"><a href="#" class="pages__link">2</a></li>
+					<li class="pages__item"><a href="#" class="pages__link">3</a></li>
+				</ul>
+			</div>
+		</div>
+		<div class="slider slider--grey">
+			<div class="slider__inner">
+				<div class="tarif">
+					<ul class="tarif__list">
+						<li class="tarif__title"><span class="tarif__name">Стандарт</span> 3,99 USD</li>
+						<li class="tarif__item tarif__item--selected">Розовый фильтр</li>
+						<li class="tarif__item tarif__item--selected">Смайлики</li>
+						<li class="tarif__item tarif__item--nonselected">Комментарии</li>
+					</ul>
+				</div>
+				<div class="tarif">
+					<ul class="tarif__list  tarif--hit">
+						<li class="tarif__title"><span class="tarif__name">Стандарт</span> 3,99 USD</li>
+						<li class="tarif__item tarif__item--selected">Розовый фильтр</li>
+						<li class="tarif__item tarif__item--selected">Смайлики</li>
+						<li class="tarif__item tarif__item--nonselected">Комментарии</li>
+					</ul>
+				</div>
+				<div class="tarif">
+					<ul class="tarif__list">
+						<li class="tarif__title"><span class="tarif__name">Стандарт</span> 3,99 USD</li>
+						<li class="tarif__item tarif__item--selected">Розовый фильтр</li>
+						<li class="tarif__item tarif__item--selected">Смайлики</li>
+						<li class="tarif__item tarif__item--nonselected">Комментарии</li>
 					</ul>
 				</div>
 			</div>
-			<div class="slider slider--grey">
-				<div class="slider__inner">
-					<div class="tarif">
-						<ul class="tarif__list">
-							<li class="tarif__title"><span class="tarif__name">Стандарт</span> 3,99 USD</li>
-							<li class="tarif__item tarif__item--selected">Розовый фильтр</li>
-							<li class="tarif__item tarif__item--selected">Смайлики</li>
-							<li class="tarif__item tarif__item--nonselected">Комментарии</li>
-						</ul>
-					</div>
-					<div class="tarif">
-						<ul class="tarif__list  tarif--hit">
-							<li class="tarif__title"><span class="tarif__name">Стандарт</span> 3,99 USD</li>
-							<li class="tarif__item tarif__item--selected">Розовый фильтр</li>
-							<li class="tarif__item tarif__item--selected">Смайлики</li>
-							<li class="tarif__item tarif__item--nonselected">Комментарии</li>
-						</ul>
-					</div>
-					<div class="tarif">
-						<ul class="tarif__list">
-							<li class="tarif__title"><span class="tarif__name">Стандарт</span> 3,99 USD</li>
-							<li class="tarif__item tarif__item--selected">Розовый фильтр</li>
-							<li class="tarif__item tarif__item--selected">Смайлики</li>
-							<li class="tarif__item tarif__item--nonselected">Комментарии</li>
-						</ul>
-					</div>
-				</div>
-				<div class="pages">
-				 	<ul class="pages__list">
-						<li class="pages__item"><a href="#" class="pages__link">1</a></li>
-						<li class="pages__item"><a href="#" class="pages__link  pages__link--active">2</a></li>
-						<li class="pages__item"><a href="#" class="pages__link">3</a></li>
-					</ul>
-				</div>
+			<div class="pages">
+				<ul class="pages__list">
+					<li class="pages__item"><a href="#" class="pages__link">1</a></li>
+					<li class="pages__item"><a href="#" class="pages__link  pages__link--active">2</a></li>
+					<li class="pages__item"><a href="#" class="pages__link">3</a></li>
+				</ul>
 			</div>
 		</div>
 	</div>
 	
 	<footer class="page-footer">
-		<div class="wrapper-center">
-			<p class="page-footer__title">Остались вопросы? Свяжитесь с нами!</p>
-			<section class="contacts">
-				<h2 class="contacts__title">Звоните</h2>
-				<p class="contacts__text">+7 (812) 555-66-66</p>
-				<h2 class="contacts__title">Пишите</h2>
-				<p class="contacts__text">mail@htmlacademy.ru</p>
-				<h2 class="contacts__title">Приежайте в гости</h2>
-				<p class="contacts__text">ул. Большая Конюшенная, 19/8</p>
-			</section>
-		</div>
+		<p class="page-footer__title">Остались вопросы? Свяжитесь с нами!</p>
+		<section class="contacts">
+			<h2 class="contacts__title">Звоните</h2>
+			<p class="contacts__text">+7 (812) 555-66-66</p>
+			<h2 class="contacts__title">Пишите</h2>
+			<p class="contacts__text">mail@htmlacademy.ru</p>
+			<h2 class="contacts__title">Приежайте в гости</h2>
+			<p class="contacts__text">ул. Большая Конюшенная, 19/8</p>
+		</section>
 	</footer>
   <!-- <script src="js/script.js"></script> -->
 
