--- a/blog.html
+++ b/blog.html
@@ -10,8 +10,8 @@
 </head>
 <body>
 	<header class="page-header">
-		<div class="wrapper-center">
-			<div class="page-header-wrap">
+		<div class="page-header__wrap">
+			<div class="page-header-top">
 				<div class="logo">
 					<a class="logo__link" href="index.html">
 						<img src="img/logo.png" class="logo__img" alt="logo">
@@ -27,64 +27,58 @@
 					</ul>
 				</div>
 			</div>
+
+			<h1 class="page-title">Блог путешественников, пользователей Пинк</h1>	
 		</div>
 	</header>
-	
-	<div class="wrapper-center">
-		<h1 class="page-title">
-			Блог путешественников, пользователей Пинк	
-		</h1>
-		<div class="blog">
-			<article class="blog-item">
-				<h2 class="blog-item__title">Антон и Надя в Тайланде</h2>
-				<div class="blog-item__date">Опубликовано: 6 месяцев назад</div>
-				<p class="blog-item__text">Читайте рассказ о том, как семейная пара посещала Тайланд, стараясь максимально избегать избитых туристических мест и районов.</p>
-			</article>
-			<article class="blog-item">
-				<h2 class="blog-item__title">Гастрольный тур «Кубанских борщеваров»</h2>
-				<div class="blog-item__date">Опубликовано: 5 лет назад</div>
-				<p class="blog-item__text">Возрождение культурных традиций уже не за горами. Фолк-металл-рэп-группа из столицы Кубани провела весь год в гастролях по России и ближнему (а также среднему) зарубежью.</p>
-			</article>
-			<article class="blog-item">
-				<h2 class="blog-item__title">Чета Болонских в Париже</h2>
-				<div class="blog-item__date">Опубликовано: 100 лет назад</div>
-				<p class="blog-item__text">Невероятные приключения русских во Франции. Интриги, предательства, погони и, разумеется, убийства. Читайте криминально-исторический трактат в двух томах.</p>
-			</article>
-			<article class="blog-item">
-				<h2 class="blog-item__title">Путешествие на яхте сеньора Христофора</h2>
-				<div class="blog-item__date">Опубликовано: 523 года назад</div>
-				<p class="blog-item__text">Группа испанцев отдыхала на яхте, но они даже не представляли, какие открытия ждут их впереди и чем это обернется для всего человечества!</p>
-			</article>
-		</div>
-	
-		<div class="pagination">
-			<ul class="pagination__list">
-				<li class="pagination__item"><a href="#" class="pagination__link pagination__link--active">1</a></li>
-				<li class="pagination__item"><a href="#" class="pagination__link">2</a></li>
-				<li class="pagination__item"><a href="#" class="pagination__link">3</a></li>
-				<li class="pagination__item"><a href="#" class="pagination__link">4</a></li>
-			</ul>
-		</div>
 
+	<div class="blog">
+		<article class="blog-item">
+			<h2 class="blog-item__title">Антон и Надя в Тайланде</h2>
+			<div class="blog-item__date">Опубликовано: 6 месяцев назад</div>
+			<p class="blog-item__text">Читайте рассказ о том, как семейная пара посещала Тайланд, стараясь максимально избегать избитых туристических мест и районов.</p>
+		</article>
+		<article class="blog-item">
+			<h2 class="blog-item__title">Гастрольный тур «Кубанских борщеваров»</h2>
+			<div class="blog-item__date">Опубликовано: 5 лет назад</div>
+			<p class="blog-item__text">Возрождение культурных традиций уже не за горами. Фолк-металл-рэп-группа из столицы Кубани провела весь год в гастролях по России и ближнему (а также среднему) зарубежью.</p>
+		</article>
+		<article class="blog-item">
+			<h2 class="blog-item__title">Чета Болонских в Париже</h2>
+			<div class="blog-item__date">Опубликовано: 100 лет назад</div>
+			<p class="blog-item__text">Невероятные приключения русских во Франции. Интриги, предательства, погони и, разумеется, убийства. Читайте криминально-исторический трактат в двух томах.</p>
+		</article>
+		<article class="blog-item">
+			<h2 class="blog-item__title">Путешествие на яхте сеньора Христофора</h2>
+			<div class="blog-item__date">Опубликовано: 523 года назад</div>
+			<p class="blog-item__text">Группа испанцев отдыхала на яхте, но они даже не представляли, какие открытия ждут их впереди и чем это обернется для всего человечества!</p>
+		</article>
+	</div>
+
+	<div class="pagination">
+		<ul class="pagination__list">
+			<li class="pagination__item"><a href="#" class="pagination__link pagination__link--active">1</a></li>
+			<li class="pagination__item"><a href="#" class="pagination__link">2</a></li>
+			<li class="pagination__item"><a href="#" class="pagination__link">3</a></li>
+			<li class="pagination__item"><a href="#" class="pagination__link">4</a></li>
+		</ul>
 	</div>
 	
 	<footer class="main-footer">
-		<div class="wrapper-center">
-			<div class="logo">
-				<a class="logo__link" href="index.html">
-					<img src="img/footer-logo.png" class="logo__img" alt="logo">
-				</a>
-			</div>
-			<div class="social-icons">
-				<a href="" class="social-icon social-icon--tw"></a>
-				<a href="" class="social-icon social-icon--fb"></a>
-				<a href="" class="social-icon social-icon--yt"></a>
-			</div>
-			<div class="developer">
-				<div class="developer__text">Разработано</div>
-				<a href="" class="developer__link">
-					<img src="img/h-academy.png" alt="HTML Academy">
-				</a>
-			</div>
+		<div class="logo">
+			<a class="logo__link" href="index.html">
+				<img src="img/footer-logo.png" class="logo__img" alt="logo">
+			</a>
+		</div>
+		<div class="social-icons">
+			<a href="" class="social-icon social-icon--tw"></a>
+			<a href="" class="social-icon social-icon--fb"></a>
+			<a href="" class="social-icon social-icon--yt"></a>
+		</div>
+		<div class="developer">
+			<div class="developer__text">Разработано</div>
+			<a href="" class="developer__link">
+				<img src="img/h-academy.png" alt="HTML Academy">
+			</a>
 		</div>
 	</footer>
